# MokyaLora_EMU

./: .gitmodules  CLAUDE.md  TODO.md  build_wasm.sh
.github/workflows/: deploy-pages.yml  deploy.yml
doc/ui/: 00-design-charter.md  01-page-architecture.md  10-status-bar.md  12-ime.md  20-launcher-home.md  50-settings-leaf-templates.md  README.md
mokya-twin/: ROADMAP.md  index.html  manifest.json  sw.js
mokya-twin/css/: device.css
mokya-twin/data/: zhuyin-mock.json
mokya-twin/firmware-stubs/: mie_wasm_api.h  mie_wasm_glue.cpp
mokya-twin/js/: app.js
mokya-twin/js/core/: mie-processor.js  mie-timer.js  mie-trie.js
mokya-twin/js/hal/: display-hal.js  keyboard-hal.js  mie-hal.js
mokya-twin/js/serial/: meshtastic-frame.js  meshtastic-serial.js  protobuf.js
mokya-twin/js/ui/: colors.js  icons.js  mief-font.js  renderer.js  screen-manager.js
mokya-twin/js/ui/components/: hint-bar.js
mokya-twin/js/ui/screens/: _chrome.js  battery-screen.js  canned-screen.js  channel-add-screen.js  channel-share-screen.js  chat-screen.js  connect-screen.js  drafts-store.js  field-edit-screen.js  firmware-info-screen.js  gnss-sky-screen.js  home-screen.js  hw-diag-screen.js  lock-screen.js  lora-test-screen.js  map-nav-screen.js  map-screen.js  menu-screen.js  mesh-channels-screen.js  mesh-config-screen.js  mesh-modules-screen.js  mesh-settings-data.js  meshtastic-screen.js  messages-screen.js  msg-detail-screen.js  my-node-screen.js  node-detail-screen.js  node-ops-screen.js  nodes-screen.js  pairing-screen.js  placeholder-screen.js  range-test-screen.js  remote-admin-screen.js  sensors-screen.js  settings-home-screen.js  settings-list-screen.js  settings-screen.js  sniffer-screen.js  sos-config-screen.js  sos-screen.js  (+9 more)
mokya-twin/tools/: mock_to_mied.py
mokya-twin/wasm/: mie_core.wasm
mokya-twin/wasm-build/: CMakeLists.txt
